Implement Stable token to Native Token swap functionality in InjectivePlugin

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=8000
 MONGODB_URI=mongodb://localhost:27017/dca-service
 BLOCKCHAIN_PLUGIN=injective
-PRIVATE_KEY_INJECTIVE=
+MNEMONIC_INJECTIVE=boat trap can play warrior cliff certain noise tape walnut initial couch
 TON_ENDPOINT=https://toncenter.com/api/v2/jsonRPC 
